k8s-gcp/gateway/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: url-shortener
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: asia-northeast1-docker.pkg.dev/test-project-501302/url-shortener/gateway:v0.0.1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: url-shortener
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8000": "gateway-backend-config"}}'
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
